# downmix-renderer-7.1-windows

./: .gitignore  README.md  ROUTE_TRUTH_REPORT.md  TECHNICAL_SPECIFICATION.md  design.md  pyproject.toml  renderer_app.spec
cpp_backend/: downmix_native.cpp
docs/: ARCHITECTURE.md  HARDENING_LOG.md  TECHNICAL_SPECIFICATION.md
downmix-renderer-research/: README.md
downmix-renderer-research/downmix_renderer/: dsp.py  matrix.py
downmix-renderer-research/tests/: test_dsp.py
downmix_renderer/: __init__.py  app.py  audio_engine.py  constants.py  devices.py  dsp.py  layouts.py  matrix.py  native_audio.py  peq.py  presets.py  route_probe.py  routing.py  sample_rates.py  settings.py  startup.py  volume.py
production testing/_internal/numpy-2.2.6.dist-info/: RECORD
scripts/: build_native_backend.py  build_release.ps1  make_icon.py  sign_release.ps1
tests/: test_app_ui.py  test_audio_engine.py  test_devices.py  test_dsp.py  test_native_audio.py  test_native_dsp.py  test_peq.py  test_presets.py  test_release_hardening.py  test_route_probe.py  test_settings.py  test_startup.py  test_volume.py
