[project]
name = "downmix-renderer-production"
version = "0.1.0"
description = "Production Windows 9.1.6 downmix renderer"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.2.6",
    "sounddevice==0.5.5",
    "PyQt5==5.15.11",
    "pywin32==311",
]

[project.optional-dependencies]
volume-pycaw = [
    "pycaw==20251023",
    "comtypes==1.4.16",
]
build = [
    "Pillow==12.2.0",
    "pyinstaller==6.20.0",
    "ziglang==0.16.0",
]
test = []

[tool.pyright]
typeCheckingMode = "basic"
